--- a/lastejobb/package.json
+++ b/lastejobb/package.json
@@ -4,9 +4,14 @@
   "description": "loader for artwork",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "node index.js"
+  },
   "dependencies": {
+    "@artsdatabanken/typesystem": "^3.0.2",
     "fs-extra": "^5.0.0",
     "log-fancy": "1.0.3",
+    "log-less-fancy": "^1.3.3",
     "node-fetch": "^2.1.2"
   },
   "devDependencies": {
