--- a/lastejobb/package.json
+++ b/lastejobb/package.json
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Artsdatabanken/ografika/issues"
+  },
 }
